--- a/WebContent/views/QSECOFR_Main.html
+++ b/WebContent/views/QSECOFR_Main.html
@@ -10,12 +10,20 @@
   https://www.tutorialrepublic.com/css-reference/css-top-property.php
   -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../resources/styles/bootstrap.min.css" rel="stylesheet" />
-  <link href="../resources/css/font-awesome.min.css" rel="stylesheet">
-  <script src="../resources/scripts/jquery-2.2.4.min.js"></script>
-  <script src="../resources/scripts/Moment/moment.min.js" type="text/javascript"></script>
-  <script src="../resources/scripts/DatePicker/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
+  <link href="../resources/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../resources/css/font-awesome-free-5.12.1-web/all.min.css" rel="stylesheet" />
+  <link href="../resources/css/font-awesome-free-5.12.1-web/font-awesome.min.css" rel="stylesheet">
+  <link href="../resources/css/font-awesome-free-5.12.1-web/brands.min.css" rel="stylesheet" />
+  <link href="../resources/css/font-awesome-free-5.12.1-web/solid.min.css" rel="stylesheet" />
+  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/all.min.js"></script>
+  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/brands.min.js"></script>
+  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/solid.min.js"></script>
+  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/fontawesome.min.js"></script>
+  <script src="../resources/scripts/jquery-3.4.1.min.js"></script>
   <script src="../resources/scripts/bootstrap.min.js"></script>
+  <script src="../resources/scripts/momentJS/moment.min.js" type="text/javascript"></script>
+  <script src="../resources/scripts/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.js" type="text/javascript"></script>
+  <link href="../resources/css/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
   <!--
   <link href="../../../../Boostrap/styles/bootstrap.min.css" rel="stylesheet">
   <script src="../../../../jQueryLib/scripts/jquery-2.2.4.min.js"></script>
@@ -25,7 +33,7 @@
 <style type="text/css">
 /* Custom Styles */
   body{
-    padding-top: 60px;
+    padding-top: 0px;
   }
   .userProfileForm {
     margin-left: 0px;
@@ -103,9 +111,10 @@
 </style>
 </head>
 <body>
+	<!--
     <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
+      
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -115,7 +124,7 @@
         </button>
         <a class="navbar-brand" href="#">Brand</a>
       </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
+      
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="dropdown">
@@ -164,10 +173,74 @@
           <h4>QSECOFR Main</h4>
         </form>
         <div id="title-loginID" class="formElementPadLeft preserveWhiteSpace">*...+ .. 1 .. +</div>
-        <div id="form-feedback" class="formElementPadLeft" style="color:red;">XXX</div> <!--90 char-->
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        <div id="form-feedback" class="formElementPadLeft" style="color:red;">XXX</div>
+      </div>
+    </div>
   </nav>
+-->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-bottom">
+		<a class="navbar-brand" href="#">Navbar</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Quick Links<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu  multi-level" style="width: 150px;" role="menu" aria-labelledby="dropdownMenu">
+						<li class="dropdown-submenu">
+							<a tabindex="-1" href="#">User Tables</a>
+							<ul class="dropdown-menu" style="width: 250px;">
+								<li id="UPView"><a href="#">View User Profile</a></li>
+								<li id="UPChange"><a href="#">User Profile Maintenance</a></li>
+								<li id="STView"><a href="#">View Sessions Table</a></li>
+								<li id="STChange"><a href="#">Sessions Table Maintenance</a></li>
+								<li id="UP1View"><a href="#">View Unique Tokens Table</a></li>
+								<li id="UP1Change"><a href="#">Unique Tokens Table Maintenance</a></li>
+								<li id="UGView"><a href="#">View User Groups Table</a></li>
+								<li id="UGChange"><a href="#">User Groups Table Maintenance</a></li>
+							</ul>
+						</li>
+
+						<li class="dropdown-submenu">
+							<a href="#">Permissions</a>
+							<ul class="dropdown-menu" style="width: 250px;">
+								<li id="PMView"><a href="#">View Permissions Master</a></li>
+								<li id="PMChange"><a href="#">Permissions Master Maintenance</a></li>
+								<li id="GPView"><a href="#">View Group Permissions</a></li>
+								<li id="GPChange"><a href="#">Group Permissions Maintenance</a></li>
+							</ul>
+						</li>
+
+						<li class="dropdown-submenu">
+							<a href="#">Misc.</a>
+							<ul class="dropdown-menu" style="width: 250px;">
+								<li id="GMView"><a href="#">View Group Master</a></li>
+								<li id="GMChange"><a href="#">Group Master Maintenance</a></li>
+								<li id="PPView"><a href="#">View Password Policy</a></li>
+								<li id="PPChange"><a href="#">Password Policy Maintenance</a></li>
+								<li id="STView"><a href="#">View Sessions Table</a></li>
+								<li id="STChange"><a href="#">Sessions Table Maintenance</a></li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+			</ul>
+			<form class="form-inline pl-2">
+          <h4>QSECOFR Main</h4>
+			</form>
+			<div class="d-inline-flex flex-sm-column">
+				<div id="title-loginID" class="pb-sm-1 preserveWhiteSpace"></div>
+				<div id="form-feedback" style="color:red; margin-left: 47px">
+					*...+ .. 1 .. + .. 2 .. + .. 3 .. + .. 4 .. + .. 5 .. + .. 6 .. + .. 7 .. + .. 8 .. + .. 9
+				</div> <!--90 char-->
+			</div>
+		</div>
+	</nav>	
+
 
   <a data-toggle="collapse" href="#UserOptions" aria-expanded="false" aria-controls="UserOptions"><h2>User Tables<span class="caret" /></h2></a>
   <div class="row">
@@ -223,7 +296,7 @@
   </div>
 <script>
   $(function () {
-    $('#title-loginID').text(parent.userName);
+    $('#title-loginID').text('          ' + parent.userName);
     $('li#UPView').click(function() {
       newFrame('views/userProfile_CRUD.html?mode=view');
     });
