--- a/WebContent/views/selectGroup.html
+++ b/WebContent/views/selectGroup.html
@@ -10,12 +10,20 @@
   https://www.tutorialrepublic.com/css-reference/css-top-property.php
   -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../resources/styles/bootstrap.min.css" rel="stylesheet" />
-  <link href="../resources/css/font-awesome.min.css" rel="stylesheet">
-  <script src="../resources/scripts/jquery-2.2.4.min.js"></script>
-  <script src="../resources/scripts/Moment/moment.min.js" type="text/javascript"></script>
-  <script src="../resources/scripts/DatePicker/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
+  <link href="../resources/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../resources/css/font-awesome-free-5.12.1-web/all.min.css" rel="stylesheet" />
+  <link href="../resources/css/font-awesome-free-5.12.1-web/font-awesome.min.css" rel="stylesheet">
+  <link href="../resources/css/font-awesome-free-5.12.1-web/brands.min.css" rel="stylesheet" />
+  <link href="../resources/css/font-awesome-free-5.12.1-web/solid.min.css" rel="stylesheet" />
+  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/all.min.js"></script>
+  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/brands.min.js"></script>
+  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/solid.min.js"></script>
+  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/fontawesome.min.js"></script>
+  <script src="../resources/scripts/jquery-3.4.1.min.js"></script>
   <script src="../resources/scripts/bootstrap.min.js"></script>
+  <script src="../resources/scripts/momentJS/moment.min.js" type="text/javascript"></script>
+  <script src="../resources/scripts/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.js" type="text/javascript"></script>
+  <link href="../resources/css/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
   <!-- testlig local
   <link href="../../../../Boostrap/styles/bootstrap.min.css" rel="stylesheet">
   <script src="../../../../jQueryLib/scripts/jquery-2.2.4.min.js"></script>
@@ -25,7 +33,7 @@
 <style type="text/css">
 /* Custom Styles */
   body{
-    padding-top: 70px;
+    padding-top: 0px;
   }
   .userProfileForm {
     margin-left: 0px;
@@ -100,32 +108,24 @@
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
 }
+	
+	.formFeedback {
+		margin-left: ($spacer * 3) !important;
+	}
 </style>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Brand</a>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-        </ul>
-        <form class="navbar-form navbar-left">
-          <div id="title-loginID" class="formElementPadLeft preserveWhiteSpace"></div>
-          <div id="form-feedback" class="formElementPadLeft" style="color:red;">XXX</div> <!--90 char-->
-        </form>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-bottom">
+		<a class="navbar-brand" href="#">Navbar</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="d-inline-flex flex-sm-column" id="navbarSupportedContent">
+			<div id="title-loginID" class="preserveWhiteSpace"></div>
+			<div id="form-feedback" style="color:red; margin-left: 167px">XXX</div> <!--90 char-->
+		</div>
+	</nav>
   
   <div class="container" id="pageLinks">
     <h2>Select your initial menu from the following</h2>
