--- a/WebContent/views/changePwd.html
+++ b/WebContent/views/changePwd.html
@@ -6,10 +6,10 @@
   <meta HTTP-EQUIV="Expires" CONTENT="-1">
   <title>Yardi Change Password</title>
   <link href="../resources/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../resources/css/font-awesome-free-5.12.1-web/all.min.css" rel="stylesheet" />
-  <link href="../resources/css/font-awesome-free-5.12.1-web/font-awesome.min.css" rel="stylesheet" />
-  <link href="../resources/css/font-awesome-free-5.12.1-web/brands.min.css" rel="stylesheet" />
-  <link href="../resources/css/font-awesome-free-5.12.1-web/solid.min.css" rel="stylesheet" />
+  <link href="../resources/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet" />
+  <link href="../resources/fontawesome-free-5.12.1-web/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="../resources/fontawesome-free-5.12.1-web/css/brands.min.css" rel="stylesheet" />
+  <link href="../resources/fontawesome-free-5.12.1-web/css/solid.min.css" rel="stylesheet" />
 	<style>
 		.red {
 			color: red;
@@ -20,10 +20,10 @@
 	</style>  
 </head>
 <body>
-  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/all.min.js"></script>
-  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/brands.min.js"></script>
-  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/solid.min.js"></script>
-  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/fontawesome.min.js"></script>
+  <script defer src="../resources/fontawesome-free-5.12.1-web/js/all.min.js"></script>
+  <script defer src="../resources/fontawesome-free-5.12.1-web/js/brands.min.js"></script>
+  <script defer src="../resources/fontawesome-free-5.12.1-web/js/solid.min.js"></script>
+  <script defer src="../resources/fontawesome-free-5.12.1-web/js/fontawesome.min.js"></script>
   <script src="../resources/scripts/jquery-3.4.1.min.js"></script>
   <script src="../resources/scripts/bootstrap.min.js"></script>
     <div class="container">
