--- a/WebContent/views/userGroups_CRUD.html
+++ b/WebContent/views/userGroups_CRUD.html
@@ -11,14 +11,14 @@
   -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="../resources/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../resources/css/font-awesome-free-5.12.1-web/all.min.css" rel="stylesheet" />
-  <link href="../resources/css/font-awesome-free-5.12.1-web/font-awesome.min.css" rel="stylesheet">
-  <link href="../resources/css/font-awesome-free-5.12.1-web/brands.min.css" rel="stylesheet" />
-  <link href="../resources/css/font-awesome-free-5.12.1-web/solid.min.css" rel="stylesheet" />
-  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/all.min.js"></script>
-  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/brands.min.js"></script>
-  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/solid.min.js"></script>
-  <script defer src="../resources/scripts/font-awesome-free-5.12.1-web/fontawesome.min.js"></script>
+  <link href="../resources/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet" />
+  <link href="../resources/fontawesome-free-5.12.1-web/css/font-awesome.min.css	" rel="stylesheet">
+  <link href="../resources/fontawesome-free-5.12.1-web/css/brands.min.css" rel="stylesheet" />
+  <link href="../resources/fontawesome-free-5.12.1-web/css/solid.min.css" rel="stylesheet" />
+  <script defer src="../resources/fontawesome-free-5.12.1-web/js/all.min.js"></script>
+  <script defer src="../resources/fontawesome-free-5.12.1-web/js/brands.min.js"></script>
+  <script defer src="../resources/fontawesome-free-5.12.1-web/js/solid.min.js"></script>
+  <script defer src="../resources/fontawesome-free-5.12.1-web/js/fontawesome.min.js"></script>
   <script src="../resources/scripts/jquery-3.4.1.min.js"></script>
   <script src="../resources/scripts/bootstrap.min.js"></script>
   <script src="../resources/scripts/momentJS/moment.min.js" type="text/javascript"></script>
