--- a/WebContent/views/changePwd.html
+++ b/WebContent/views/changePwd.html
@@ -7,7 +7,7 @@
   <title>Yardi Change Password</title>
   <link href="../resources/css/bootstrap.min.css" rel="stylesheet" />
   <link href="../resources/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet" />
-  <link href="../resources/fontawesome-free-5.12.1-web/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="../resources/fontawesome-free-5.12.1-web/css/fontawesome.min.css" rel="stylesheet" />
   <link href="../resources/fontawesome-free-5.12.1-web/css/brands.min.css" rel="stylesheet" />
   <link href="../resources/fontawesome-free-5.12.1-web/css/solid.min.css" rel="stylesheet" />
 	<style>
