--- a/WebContent/views/uniqueTokens_CRUD.html
+++ b/WebContent/views/uniqueTokens_CRUD.html
@@ -17,7 +17,7 @@ Try using jquery to change the html on the <link> tags and the <script> tags
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="../resources/css/bootstrap.min.css" rel="stylesheet" />
   <link href="../resources/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet" />
-  <link href="../resources/fontawesome-free-5.12.1-web/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../resources/fontawesome-free-5.12.1-web/css/fontawesome.min.css" rel="stylesheet">
   <link href="../resources/fontawesome-free-5.12.1-web/css/brands.min.css" rel="stylesheet" />
   <link href="../resources/fontawesome-free-5.12.1-web/css/solid.min.css" rel="stylesheet" />
   <script defer src="../resources/fontawesome-free-5.12.1-web/js/all.min.js"></script>
