--- a/WebContent/views/userProfile_CRUD.html
+++ b/WebContent/views/userProfile_CRUD.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="../resources/css/bootstrap.min.css" rel="stylesheet" />
   <link href="../resources/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet" />
-  <link href="../resources/fontawesome-free-5.12.1-web/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../resources/fontawesome-free-5.12.1-web/css/fontawesome.min.css" rel="stylesheet">
   <link href="../resources/fontawesome-free-5.12.1-web/css/brands.min.css" rel="stylesheet" />
   <link href="../resources/fontawesome-free-5.12.1-web/css/solid.min.css" rel="stylesheet" />
   <script defer src="../resources/fontawesome-free-5.12.1-web/js/all.min.js"></script>
@@ -24,14 +24,6 @@
   <script src="../resources/scripts/momentJS/moment.min.js" type="text/javascript"></script>
   <script src="../resources/scripts/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.js" type="text/javascript"></script>
   <link href="../resources/css/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-  <!--
-  <link href="../../../../Boostrap/styles/bootstrap.min.css" rel="stylesheet">
-  <link href="../resources/css/font-awesome.min.css" rel="stylesheet">
-  <script src="../../../../jQueryLib/scripts/jquery-2.2.4.min.js"></script>
-  <script src="../resources/scripts/Moment/moment.min.js" type="text/javascript"></script>
-  <script src="../resources/scripts/DatePicker/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
-  <script src="../../../../Boostrap/scripts/bootstrap.min.js"></script>
-  -->
 <style type="text/css">
 /* Custom Styles */
   body{
