--- a/WebContent/views/userProfile_CRUD.html
+++ b/WebContent/views/userProfile_CRUD.html
@@ -323,7 +323,7 @@
 							<input type="text" class="roundedCorners form-control-sm border" name="dob" id="dob" required readonly 
 										 placeholder="click here==>"/>
 							<div class="input-group-append">	
-								<span class="fa fa-calendar fa-lg"></span>
+								<span class="far fa-calendar-alt fa-lg"></span>
 							</div>
 						</div>
 					</div>					
@@ -346,7 +346,7 @@
 						<div class="input-group date" id="datePicker4">
 							<input	type="text" class="roundedCorners form-control-sm border" name="pwdExpDate" id="pwdExpDate" required 							readonly placeholder="click here ==>"/>
 							<div class="input-group-append">
-								<span class="fa fa-calendar fa-lg"></span>
+								<span class="far fa-calendar-alt fa-lg"></span>
 							</div>
 						</div>
 					</div>
@@ -356,7 +356,7 @@
 							<input type="text" class="roundedCorners form-control-sm border" name="disabledDate" id="disabledDate" readonly
 										 placeholder="click here==>"/>
 							<div class="input-group-append">
-								<span class="fa fa-calendar fa-lg"></span>
+								<span class="far fa-calendar-alt fa-lg"></span>
 							</div>
 						</div>
 					</div>					
@@ -450,7 +450,7 @@
 							<div class="input-group date" id="datePicker3">
 								<input	type="text" class="roundedCorners form-control-sm border" name="lastLogin" id="lastLogin" required 							readonly placeholder="click here==>"/>
 								<div class="input-group-append">
-									<span class="fa fa-calendar fa-lg"></span>
+									<span class="far fa-calendar-alt fa-lg"></span>
 								</div>
 							</div>
 						</div>
@@ -588,40 +588,40 @@
       format: "MM/DD/YYYY",
       ignoreReadonly: true,
       icons: {
-        time: "fa fa-clock-o",
-        date: "fa fa-calendar",
-        up:   "fa fa-arrow-up",
-        down: "fa fa-arrow-down"
+        time: "far fa-clock",
+        date: "far fa-calendar-alt",
+        up:   "fas fa-arrow-up",
+        down: "fas fa-arrow-down"
       }
     });
     $('#datePicker2').datetimepicker({
       format: "MM/DD/YYYY",
       ignoreReadonly: true,
       icons: {
-        time: "fa fa-clock-o",
-        date: "fa fa-calendar",
-        up:   "fa fa-arrow-up",
-        down: "fa fa-arrow-down"
+        time: "far fa-clock",
+        date: "far fa-calendar-alt",
+        up:   "fas fa-arrow-up",
+        down: "fas fa-arrow-down"
       }
     });
     $('#datePicker3').datetimepicker({
       format: "MM/DD/YYYY",
       ignoreReadonly: true,
       icons: {
-        time: "fa fa-clock-o",
-        date: "fa fa-calendar",
-        up:   "fa fa-arrow-up",
-        down: "fa fa-arrow-down"
+        time: "far fa-clock",
+        date: "far fa-calendar-alt",
+        up:   "fas fa-arrow-up",
+        down: "fas fa-arrow-down"
       }
     });
     $('#datePicker4').datetimepicker({
       format: "MM/DD/YYYY",
       ignoreReadonly: true,
       icons: {
-        time: "fa fa-clock-o",
-        date: "fa fa-calendar",
-        up:   "fa fa-arrow-up",
-        down: "fa fa-arrow-down"
+        time: "far fa-clock",
+        date: "far fa-calendar-alt",
+        up:   "fas fa-arrow-up",
+        down: "fas fa-arrow-down"
       }
     }); 
     $('.navbar-brand').click(function() {
