--- a/WebContent/views/QSECOFR_Main.html
+++ b/WebContent/views/QSECOFR_Main.html
@@ -24,222 +24,151 @@
   <script src="../resources/scripts/momentJS/moment.min.js" type="text/javascript"></script>
   <script src="../resources/scripts/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.js" type="text/javascript"></script>
   <link href="../resources/css/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-  <!--
-  <link href="../../../../Boostrap/styles/bootstrap.min.css" rel="stylesheet">
-  <script src="../../../../jQueryLib/scripts/jquery-2.2.4.min.js"></script>
-  <script src="../../../../Boostrap/scripts/bootstrap.min.js"></script>
-  -->
-  
-<style type="text/css">
-/* Custom Styles */
-  body{
-    padding-top: 0px;
-  }
-  .userProfileForm {
-    margin-left: 0px;
-  }
-  .formElementPadBottom {
-    padding-bottom: 10px;
-  }
-  .formElementPadLeft {
-    padding-left: 5px;
-  }
-  .formElementPadBottomLeft {
-    padding-bottom: 10px;
-    padding-left: 5px;
-  }
-  .roundedCorners {
-    -webkit-border-radius: 4px;
-       -moz-border-radius: 4px;
-            border-radius: 4px;
-    border-style: solid;
-    border-width: 1px;
-  }
-  .preserveWhiteSpace {
-    white-space: pre;
-  }
-  
-  
-  
-.dropdown-submenu {
-    position: relative;
-}
-
-.dropdown-submenu>.dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -6px;
-    margin-left: -1px;
-    -webkit-border-radius: 0 6px 6px 6px;
-    -moz-border-radius: 0 6px 6px;
-    border-radius: 0 6px 6px 6px;
-}
-
-.dropdown-submenu:hover>.dropdown-menu {
-    display: block;
-}
-
-.dropdown-submenu>a:after {
-    display: block;
-    content: " ";
-    float: right;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #ccc;
-    margin-top: 5px;
-    margin-right: -10px;
-}
-
-.dropdown-submenu:hover>a:after {
-    border-left-color: #fff;
-}
-
-.dropdown-submenu.pull-left {
-    float: none;
-}
-
-.dropdown-submenu.pull-left>.dropdown-menu {
-    left: -100%;
-    margin-left: 10px;
-    -webkit-border-radius: 6px 0 6px 6px;
-    -moz-border-radius: 6px 0 6px 6px;
-    border-radius: 6px 0 6px 6px;
-}
-</style>
+  <style type="text/css">
+    body{
+      padding-top: 0px;
+    }
+    .userProfileForm {
+      margin-left: 0px;
+    }
+    .formElementPadBottom {
+      padding-bottom: 10px;
+    }
+    .formElementPadLeft {
+      padding-left: 5px;
+    }
+    .formElementPadBottomLeft {
+      padding-bottom: 10px;
+      padding-left: 5px;
+    }
+    .roundedCorners {
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+      border-style: solid;
+      border-width: 1px;
+    }
+    .preserveWhiteSpace {
+      white-space: pre;
+    }
+    .dropdown-submenu {
+      position: relative;
+    }
+    .dropdown-submenu>.dropdown-menu {
+      top: 0;
+      left: 100%;
+      margin-top: -6px;
+      margin-left: -1px;
+      -webkit-border-radius: 0 6px 6px 6px;
+      -moz-border-radius: 0 6px 6px;
+      border-radius: 0 6px 6px 6px;
+    } 
+    .dropdown-submenu:hover>.dropdown-menu {
+      display: block;
+    }
+    .dropdown-submenu>a:after {
+      display: block;
+      content: " ";
+      float: right;
+      width: 0;
+      height: 0;
+      border-color: transparent;
+      border-style: solid;
+      border-width: 5px 0 5px 5px;
+      border-left-color: #ccc;
+      margin-top: 5px;
+      margin-right: -10px;
+    }
+    .dropdown-submenu:hover>a:after {
+      border-left-color: #fff;
+    }
+    .dropdown-submenu.pull-left {
+      float: none;
+    }
+    .dropdown-submenu.pull-left>.dropdown-menu {
+      left: -100%;
+      margin-left: 10px;
+      -webkit-border-radius: 6px 0 6px 6px;
+      -moz-border-radius: 6px 0 6px 6px;
+      border-radius: 6px 0 6px 6px;
+    }
+    .white {
+      color: white;
+    }
+    .align-center {
+      text-align: center;
+    }
+    .background-red {
+      background-color:red;
+    }
+  </style>
+  <h4 class="white align-center background-red">
+    <noscript>This site requires JavaScript. Ensure that this is enabled on your browser.</noscript>
+  </h4>
 </head>
 <body>
-	<!--
-    <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Brand</a>
-      </div>
-      
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Quick Links<span class="caret"></span></a>
-            <ul class="dropdown-menu  multi-level" role="menu" aria-labelledby="dropdownMenu">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-bottom">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-              <li class="dropdown-submenu">
-                <a tabindex="-1" href="#">User Tables</a>
-                <ul class="dropdown-menu">
-                  <li id="UPView"><a href="#">View User Profile</a></li>
-                  <li id="UPChange"><a href="#">User Profile Maintenance</a></li>
-                  <li id="STView"><a href="#">View Sessions Table</a></li>
-                  <li id="STChange"><a href="#">Sessions Table Maintenance</a></li>
-                  <li id="UP1View"><a href="#">View Unique Tokens Table</a></li>
-                  <li id="UP1Change"><a href="#">Unique Tokens Table Maintenance</a></li>
-                  <li id="UGView"><a href="#">View User Groups Table</a></li>
-                  <li id="UGChange"><a href="#">User Groups Table Maintenance</a></li>
-                </ul>
-              </li>
-              
-              <li class="dropdown-submenu">
-                <a href="#">Permissions</a>
-                <ul class="dropdown-menu">
-                  <li id="PMView"><a href="#">View Permissions Master</a></li>
-                  <li id="PMChange"><a href="#">Permissions Master Maintenance</a></li>
-                  <li id="GPView"><a href="#">View Group Permissions</a></li>
-                  <li id="GPChange"><a href="#">Group Permissions Maintenance</a></li>
-                </ul>
-              </li>
-              
-              <li class="dropdown-submenu">
-                <a href="#">Misc.</a>
-                <ul class="dropdown-menu">
-                  <li id="GMView"><a href="#">View Group Master</a></li>
-                  <li id="GMChange"><a href="#">Group Master Maintenance</a></li>
-                  <li id="PPView"><a href="#">View Password Policy</a></li>
-                  <li id="PPChange"><a href="#">Password Policy Maintenance</a></li>
-                  <li id="STView"><a href="#">View Sessions Table</a></li>
-                  <li id="STChange"><a href="#">Sessions Table Maintenance</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-        </ul>
-        <form class="navbar-form navbar-left">
-          <h4>QSECOFR Main</h4>
-        </form>
-        <div id="title-loginID" class="formElementPadLeft preserveWhiteSpace">*...+ .. 1 .. +</div>
-        <div id="form-feedback" class="formElementPadLeft" style="color:red;">XXX</div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Quick Links<span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu  multi-level" style="width: 150px;" role="menu" aria-labelledby="dropdownMenu">
+            <li class="dropdown-submenu">
+              <a tabindex="-1" href="#">User Tables</a>
+              <ul class="dropdown-menu" style="width: 250px;">
+                <li id="UPView"><a href="#">View User Profile</a></li>
+                <li id="UPChange"><a href="#">User Profile Maintenance</a></li>
+                <li id="STView"><a href="#">View Sessions Table</a></li>
+                <li id="STChange"><a href="#">Sessions Table Maintenance</a></li>
+                <li id="UP1View"><a href="#">View Unique Tokens Table</a></li>
+                <li id="UP1Change"><a href="#">Unique Tokens Table Maintenance</a></li>
+                <li id="UGView"><a href="#">View User Groups Table</a></li>
+                <li id="UGChange"><a href="#">User Groups Table Maintenance</a></li>
+              </ul>
+            </li>
+
+            <li class="dropdown-submenu">
+              <a href="#">Permissions</a>
+              <ul class="dropdown-menu" style="width: 250px;">
+                <li id="PMView"><a href="#">View Permissions Master</a></li>
+                <li id="PMChange"><a href="#">Permissions Master Maintenance</a></li>
+                <li id="GPView"><a href="#">View Group Permissions</a></li>
+                <li id="GPChange"><a href="#">Group Permissions Maintenance</a></li>
+              </ul>
+            </li>
+
+            <li class="dropdown-submenu">
+              <a href="#">Misc.</a>
+              <ul class="dropdown-menu" style="width: 250px;">
+                <li id="GMView"><a href="#">View Group Master</a></li>
+                <li id="GMChange"><a href="#">Group Master Maintenance</a></li>
+                <li id="PPView"><a href="#">View Password Policy</a></li>
+                <li id="PPChange"><a href="#">Password Policy Maintenance</a></li>
+                <li id="STView"><a href="#">View Sessions Table</a></li>
+                <li id="STChange"><a href="#">Sessions Table Maintenance</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <form class="form-inline pl-2">
+        <h4>QSECOFR Main</h4>
+      </form>
+      <div class="d-inline-flex flex-sm-column">
+        <div id="title-loginID" class="pb-sm-1 preserveWhiteSpace"></div>
+        <div id="form-feedback" style="color:red; margin-left: 47px">
+          *...+ .. 1 .. + .. 2 .. + .. 3 .. + .. 4 .. + .. 5 .. + .. 6 .. + .. 7 .. + .. 8 .. + .. 9
+        </div> <!--90 char-->
       </div>
     </div>
-  </nav>
--->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-bottom">
-		<a class="navbar-brand" href="#">Navbar</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Quick Links<span class="caret"></span>
-					</a>
-					<ul class="dropdown-menu  multi-level" style="width: 150px;" role="menu" aria-labelledby="dropdownMenu">
-						<li class="dropdown-submenu">
-							<a tabindex="-1" href="#">User Tables</a>
-							<ul class="dropdown-menu" style="width: 250px;">
-								<li id="UPView"><a href="#">View User Profile</a></li>
-								<li id="UPChange"><a href="#">User Profile Maintenance</a></li>
-								<li id="STView"><a href="#">View Sessions Table</a></li>
-								<li id="STChange"><a href="#">Sessions Table Maintenance</a></li>
-								<li id="UP1View"><a href="#">View Unique Tokens Table</a></li>
-								<li id="UP1Change"><a href="#">Unique Tokens Table Maintenance</a></li>
-								<li id="UGView"><a href="#">View User Groups Table</a></li>
-								<li id="UGChange"><a href="#">User Groups Table Maintenance</a></li>
-							</ul>
-						</li>
-
-						<li class="dropdown-submenu">
-							<a href="#">Permissions</a>
-							<ul class="dropdown-menu" style="width: 250px;">
-								<li id="PMView"><a href="#">View Permissions Master</a></li>
-								<li id="PMChange"><a href="#">Permissions Master Maintenance</a></li>
-								<li id="GPView"><a href="#">View Group Permissions</a></li>
-								<li id="GPChange"><a href="#">Group Permissions Maintenance</a></li>
-							</ul>
-						</li>
-
-						<li class="dropdown-submenu">
-							<a href="#">Misc.</a>
-							<ul class="dropdown-menu" style="width: 250px;">
-								<li id="GMView"><a href="#">View Group Master</a></li>
-								<li id="GMChange"><a href="#">Group Master Maintenance</a></li>
-								<li id="PPView"><a href="#">View Password Policy</a></li>
-								<li id="PPChange"><a href="#">Password Policy Maintenance</a></li>
-								<li id="STView"><a href="#">View Sessions Table</a></li>
-								<li id="STChange"><a href="#">Sessions Table Maintenance</a></li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-			</ul>
-			<form class="form-inline pl-2">
-          <h4>QSECOFR Main</h4>
-			</form>
-			<div class="d-inline-flex flex-sm-column">
-				<div id="title-loginID" class="pb-sm-1 preserveWhiteSpace"></div>
-				<div id="form-feedback" style="color:red; margin-left: 47px">
-					*...+ .. 1 .. + .. 2 .. + .. 3 .. + .. 4 .. + .. 5 .. + .. 6 .. + .. 7 .. + .. 8 .. + .. 9
-				</div> <!--90 char-->
-			</div>
-		</div>
-	</nav>	
+  </nav>	
 
 
   <a data-toggle="collapse" href="#UserOptions" aria-expanded="false" aria-controls="UserOptions"><h2>User Tables<span class="caret" /></h2></a>
@@ -294,9 +223,32 @@
       </div>
     </div>
   </div>
+  <div class="modal fade" id="jsCookiesAlert" tabindex="-1" role="dialog" aria-labelledby="jsCookiesAlert" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Notice:</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          This site requires cookies and JavaScript. Ensure that these are enabled on your browser.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Dismiss</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <script>
   $(function () {
     $('#title-loginID').text('          ' + parent.userName);
+
+    if (navigator.cookieEnabled == false) {
+      $('#jsCookiesAlert').modal('show');
+    }
+
     $('li#UPView').click(function() {
       newFrame('views/userProfile_CRUD.html?mode=view');
     });
