--- a/WebContent/views/selectGroup.html
+++ b/WebContent/views/selectGroup.html
@@ -24,95 +24,90 @@
   <script src="../resources/scripts/momentJS/moment.min.js" type="text/javascript"></script>
   <script src="../resources/scripts/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.js" type="text/javascript"></script>
   <link href="../resources/css/bootstrap4-datetimepicker/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-  <!-- testlig local
-  <link href="../../../../Boostrap/styles/bootstrap.min.css" rel="stylesheet">
-  <script src="../../../../jQueryLib/scripts/jquery-2.2.4.min.js"></script>
-  <script src="../../../../Boostrap/scripts/bootstrap.min.js"></script>
-  -->
-  
-<style type="text/css">
-/* Custom Styles */
-  body{
-    padding-top: 0px;
-  }
-  .userProfileForm {
-    margin-left: 0px;
-  }
-  .formElementPadBottom {
-    padding-bottom: 10px;
-  }
-  .formElementPadLeft {
-    padding-left: 5px;
-  }
-  .formElementPadBottomLeft {
-    padding-bottom: 10px;
-    padding-left: 5px;
-  }
-  .roundedCorners {
-    -webkit-border-radius: 4px;
-       -moz-border-radius: 4px;
-            border-radius: 4px;
-    border-style: solid;
-    border-width: 1px;
-  }
-  .preserveWhiteSpace {
-    white-space: pre;
-  }
-  
-  
-  
-.dropdown-submenu {
-    position: relative;
-}
-
-.dropdown-submenu>.dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -6px;
-    margin-left: -1px;
-    -webkit-border-radius: 0 6px 6px 6px;
-    -moz-border-radius: 0 6px 6px;
-    border-radius: 0 6px 6px 6px;
-}
-
-.dropdown-submenu:hover>.dropdown-menu {
-    display: block;
-}
-
-.dropdown-submenu>a:after {
-    display: block;
-    content: " ";
-    float: right;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #ccc;
-    margin-top: 5px;
-    margin-right: -10px;
-}
-
-.dropdown-submenu:hover>a:after {
-    border-left-color: #fff;
-}
-
-.dropdown-submenu.pull-left {
-    float: none;
-}
-
-.dropdown-submenu.pull-left>.dropdown-menu {
-    left: -100%;
-    margin-left: 10px;
-    -webkit-border-radius: 6px 0 6px 6px;
-    -moz-border-radius: 6px 0 6px 6px;
-    border-radius: 6px 0 6px 6px;
-}
-	
-	.formFeedback {
-		margin-left: ($spacer * 3) !important;
+  <style type="text/css">
+    body{
+      padding-top: 0px;
+    }
+    .userProfileForm {
+      margin-left: 0px;
+    }
+    .formElementPadBottom {
+      padding-bottom: 10px;
+    }
+    .formElementPadLeft {
+      padding-left: 5px;
+    }
+    .formElementPadBottomLeft {
+      padding-bottom: 10px;
+      padding-left: 5px;
+    }
+    .roundedCorners {
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+      border-style: solid;
+      border-width: 1px;
+    }
+    .preserveWhiteSpace {
+      white-space: pre;
+    }
+    .dropdown-submenu {
+      position: relative;
+    }
+    .dropdown-submenu>.dropdown-menu {
+      top: 0;
+      left: 100%;
+      margin-top: -6px;
+      margin-left: -1px;
+      -webkit-border-radius: 0 6px 6px 6px;
+      -moz-border-radius: 0 6px 6px;
+      border-radius: 0 6px 6px 6px;
+    }
+    .dropdown-submenu:hover>.dropdown-menu {
+      display: block;
+    }
+    .dropdown-submenu>a:after {
+      display: block;
+      content: " ";
+      float: right;
+      width: 0;
+      height: 0;
+      border-color: transparent;
+      border-style: solid;
+      border-width: 5px 0 5px 5px;
+      border-left-color: #ccc;
+      margin-top: 5px;
+      margin-right: -10px;
+    }
+    .dropdown-submenu:hover>a:after {
+      border-left-color: #fff;
+    }
+    .dropdown-submenu.pull-left {
+      float: none;
+    }
+    .dropdown-submenu.pull-left>.dropdown-menu {
+      left: -100%;
+      margin-left: 10px;
+      -webkit-border-radius: 6px 0 6px 6px;
+      -moz-border-radius: 6px 0 6px 6px;
+      border-radius: 6px 0 6px 6px;
+    }
+    .formFeedback {
+      margin-left: ($spacer * 3) !important;
 	}
-</style>
+    .white {
+      color: white;
+    }
+    .align-center {
+      text-align: center;
+    }
+    .background-red {
+      background-color:red;
+    }
+  </style>
+  <h4 class="white align-center background-red">
+    <noscript>This site requires JavaScript. Ensure that this is enabled on your browser.</noscript>
+  </h4>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-bottom">
@@ -133,11 +128,34 @@
     <button type="button" class="btn btn-success pageBtn" id="testBtn" url="views/testUrl">Test</button>
     -->
   </div>
+  <div class="modal fade" id="jsCookiesAlert" tabindex="-1" role="dialog" aria-labelledby="jsCookiesAlert" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Notice:</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          This site requires cookies and JavaScript. Ensure that these are enabled on your browser.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Dismiss</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <script>
   $(function () {
     var viewMode = false;
     var initialPageList = parent.initialPageList;
     $('#title-loginID').text('Initial Menu Selection   ' + parent.userName);
+
+    if (navigator.cookieEnabled == false) {
+      $('#jsCookiesAlert').modal('show');
+    }
+
     $.each(JSON.parse(initialPageList), function(key, value) {
       console.log('key:' + key + ' | page:' + value.page + ' | url:' + value.url);
       var s = value.page.split(';');
